Fixed circle dependency. Added Icons for player bar. Created card factory class. Changed db retrieval to eager. Added recently played menu. Styled ImportController.